--- a/app/src/main/res/layout/activity_signup2.xml
+++ b/app/src/main/res/layout/activity_signup2.xml
@@ -59,126 +59,157 @@
                 android:layout_marginTop="40dp"
                 android:layout_width="match_parent"
                 android:text="Welcome"
-                android:textSize="25dp"
+                android:textSize="25sp"
                 android:paddingLeft="30dp"
+                android:textColor="#ffffff"
                 android:layout_height="wrap_content"
                 android:id="@+id/welcome"/>
 
 
-
-            <LinearLayout
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/input_bodytype"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
-                android:orientation="vertical"
-                android:layout_marginTop="16dp"
+                android:gravity="center"
+                android:layout_marginTop="10dp"
                 android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp">
+                android:layout_marginRight="16dp"
+                android:hint="Body Type"
+                android:textColorHint="#ffffff"
+                android:textSize="16dp"
+                app:errorEnabled="true">
 
-                <TextView
-                    android:id="@+id/bodytype_floatingtext"
+                <EditText
+                    android:id="@+id/bodytype"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="4dp"
-                    android:hint="Body Type"
-                    android:textColor="#808080"
-                    android:textSize="12dp"/>
-
-                <Spinner
-                    android:id="@+id/body_type"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="50dp"
+                    android:paddingLeft="5dp"
                     android:textSize="16dp"
-                    android:gravity="center_vertical"
-                    android:background="@drawable/underline"/>
+                    android:layout_gravity="center"
+                    android:layout_alignParentTop="true"
+                    android:layout_centerHorizontal="true"
+                    android:ems="10"
+                    android:inputType="textCapWords|textCapSentences"/>
 
-            </LinearLayout>
+            </android.support.design.widget.TextInputLayout>
 
 
-            <LinearLayout
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/input_haircolor"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
-                android:orientation="vertical"
-                android:layout_marginTop="16dp"
+                android:gravity="center"
+                android:layout_marginTop="10dp"
                 android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp">
+                android:layout_marginRight="16dp"
+                android:hint="Hair Color"
+                android:textColorHint="#ffffff"
+                android:textSize="16dp"
+                app:errorEnabled="true">
 
-                <TextView
-                    android:id="@+id/haircolor_floatingtext"
+                <EditText
+                    android:id="@+id/haircolor"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="4dp"
-                    android:hint="Hair Color"
-                    android:textColor="#808080"
-                    android:textSize="12dp"/>
-
-                <Spinner
-                    android:id="@+id/hair_color"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="50dp"
+                    android:paddingLeft="5dp"
                     android:textSize="16dp"
-                    android:gravity="center_vertical"
-                    android:background="@drawable/underline"/>
+                    android:layout_gravity="center"
+                    android:layout_alignParentTop="true"
+                    android:layout_centerHorizontal="true"
+                    android:ems="10"
+                    android:inputType="textCapWords|textCapSentences"/>
 
-            </LinearLayout>
+            </android.support.design.widget.TextInputLayout>
 
 
-            <LinearLayout
+
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/input_hairlength"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
-                android:orientation="vertical"
-                android:layout_marginTop="16dp"
+                android:gravity="center"
+                android:layout_marginTop="10dp"
                 android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp">
+                android:layout_marginRight="16dp"
+                android:hint="Hair Length"
+                android:textColorHint="#ffffff"
+                android:textSize="16dp"
+                app:errorEnabled="true">
 
-                <TextView
-                    android:id="@+id/hairlength_floatingtext"
+                <EditText
+                    android:id="@+id/hairlength"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="4dp"
-                    android:hint="Hair Length"
-                    android:textColor="#808080"
-                    android:textSize="12dp"/>
-
-                <Spinner
-                    android:id="@+id/hair_length"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="50dp"
+                    android:paddingLeft="5dp"
                     android:textSize="16dp"
-                    android:gravity="center_vertical"
-                    android:background="@drawable/underline"/>
+                    android:layout_gravity="center"
+                    android:layout_alignParentTop="true"
+                    android:layout_centerHorizontal="true"
+                    android:ems="10"
+                    android:inputType="textCapWords|textCapSentences"/>
 
-            </LinearLayout>
+            </android.support.design.widget.TextInputLayout>
 
 
-            <LinearLayout
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/input_eyecolor"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
-                android:orientation="vertical"
-                android:layout_marginTop="16dp"
+                android:gravity="center"
+                android:layout_marginTop="10dp"
                 android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp">
+                android:layout_marginRight="16dp"
+                android:hint="Eye Color"
+                android:textColorHint="#ffffff"
+                android:textSize="16dp"
+                app:errorEnabled="true">
 
-                <TextView
-                    android:id="@+id/eyecolor_floatingtext"
+                <EditText
+                    android:id="@+id/eyecolor"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="4dp"
-                    android:hint="Eye Color"
-                    android:textColor="#808080"
-                    android:textSize="12dp"/>
-
-                <Spinner
-                    android:id="@+id/eye_color"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="50dp"
+                    android:paddingLeft="5dp"
                     android:textSize="16dp"
-                    android:gravity="center_vertical"
-                    android:background="@drawable/underline"/>
+                    android:layout_gravity="center"
+                    android:layout_alignParentTop="true"
+                    android:layout_centerHorizontal="true"
+                    android:ems="10"
+                    android:inputType="textCapWords|textCapSentences"/>
 
-            </LinearLayout>
+            </android.support.design.widget.TextInputLayout>
 
 
-            <LinearLayout
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/input_skintone"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:gravity="center"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:hint="Skin Tone"
+                android:textColorHint="#ffffff"
+                android:textSize="16dp"
+                app:errorEnabled="true">
+
+                <EditText
+                    android:id="@+id/skintone"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:paddingLeft="5dp"
+                    android:textSize="16dp"
+                    android:layout_gravity="center"
+                    android:layout_alignParentTop="true"
+                    android:layout_centerHorizontal="true"
+                    android:ems="10"
+                    android:inputType="textCapWords|textCapSentences"/>
+
+            </android.support.design.widget.TextInputLayout>
+
+            <!--<LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
@@ -204,36 +235,34 @@
                     android:background="@drawable/underline"/>
 
             </LinearLayout>
+-->
 
-
-            <LinearLayout
-                android:id="@+id/facialhairlayout"
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/input_facialhair"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
-                android:orientation="vertical"
-                android:layout_marginTop="16dp"
+                android:gravity="center"
+                android:layout_marginTop="10dp"
                 android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp">
+                android:layout_marginRight="16dp"
+                android:hint="Facial Hair"
+                android:textColorHint="#ffffff"
+                android:textSize="16dp"
+                app:errorEnabled="true">
 
-                <TextView
-                    android:id="@+id/facialhair_floatingtext"
+                <EditText
+                    android:id="@+id/facialhair"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="4dp"
-                    android:hint="Facial Hair"
-                    android:textColor="#808080"
-                    android:textSize="12dp"/>
-
-                <Spinner
-                    android:id="@+id/facial_hair"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="50dp"
+                    android:paddingLeft="5dp"
                     android:textSize="16dp"
-                    android:gravity="center_vertical"
-                    android:background="@drawable/underline"/>
+                    android:layout_gravity="center"
+                    android:layout_alignParentTop="true"
+                    android:layout_centerHorizontal="true"
+                    android:ems="10"
+                    android:inputType="textCapWords|textCapSentences"/>
 
-            </LinearLayout>
-
+            </android.support.design.widget.TextInputLayout>
 
 
             <android.support.design.widget.TextInputLayout
@@ -382,6 +411,7 @@
                 android:layout_height="50dp" />
 
         </LinearLayout>
+
     </ScrollView>
 
     <Button
