--- a/app/src/main/res/layout/custom_row_news_item.xml
+++ b/app/src/main/res/layout/custom_row_news_item.xml
@@ -19,16 +19,16 @@
             android:layout_width="110dp"
             android:layout_height="110dp"
             android:elevation="10dp"
-            android:scaleType="fitXY"
+            android:scaleType="centerCrop"
             android:layout_margin="5sp"
             android:src="@drawable/bg_gradient"
             app:riv_corner_radius="10dp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="105dp"
+            android:layout_height="115dp"
             android:orientation="vertical"
-            android:layout_margin="5sp">
+            android:layout_margin="2sp">
 
             <TextView
                 android:id="@+id/largeTextView"
@@ -37,7 +37,7 @@
                 android:padding="5sp"
                 android:text="Large Text"
                 android:textColor="#000000"
-                android:textSize="13sp"
+                android:textSize="12sp"
                 android:textStyle="bold" />
 
 
@@ -45,11 +45,11 @@
                 android:id="@+id/mediumTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="2sp"
                 android:padding="5sp"
                 android:text="Medium Text"
                 android:textColor="#000000"
-                android:textSize="12sp" />
+                android:textSize="10sp" />
 
 
         </LinearLayout>
