--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -20,6 +20,13 @@
         android:layout_height="50sp"
         android:layout_centerInParent="true"/>-->
 
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/splashlogo"
+        android:layout_width="130dp"
+        android:layout_height="130dp"
+        android:src="@drawable/logo"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="80dp"/>
 
     <TextView
         android:id="@+id/ifwrongpass"
@@ -27,13 +34,15 @@
         android:layout_height="wrap_content"
         android:textColor="@color/Color_DarkRed"
         android:textAlignment="center"
-        android:layout_marginTop="150sp" />
+        android:layout_marginTop="395dp"
+        />
 
     <RelativeLayout
         android:id="@+id/rel"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_centerInParent="true">
+
 
     <EditText
         android:id="@+id/email"
@@ -61,6 +70,7 @@
             android:layout_marginTop="20dp"
             android:layout_marginLeft="30dp"
             android:layout_marginRight="30dp"
+            android:layout_marginBottom="5dp"
             app:passwordToggleEnabled="true">
 
     <android.support.design.widget.TextInputEditText
