--- a/app/src/main/res/layout/activity_client__verification_1.xml
+++ b/app/src/main/res/layout/activity_client__verification_1.xml
@@ -4,12 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.twenty.four.crafts.ClientVerification1"
+    tools:context="com.twenty.four.crafts.ClientVerification1Activity"
     android:background="@drawable/client_verify">
-
-
-
-
 
     <Button
         android:id="@+id/button3"
@@ -17,8 +13,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginBottom="21dp"
-        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="15dp"
+        android:layout_marginEnd="15dp"
         android:paddingRight="15dp"
         android:paddingLeft="15dp"
         android:text="Continue"
@@ -87,8 +83,20 @@
         android:src="@drawable/book"
         android:paddingTop="20dp"
         android:tint="@android:color/white">
-
     </ImageView>
+
+    <ImageButton
+        android:id="@+id/imageButton2"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:src="@drawable/client_cross"
+        android:tint="@android:color/white"
+        android:layout_marginTop="15dp"
+        android:layout_marginLeft="15dp"
+        android:background="@null"
+        />
 
 
 </RelativeLayout>
